--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "author": "Em Nam",
   "license": "ISC",
-
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "thenby": "^1.3.4"
   }
 }
